--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.datasource.password = Pune@1613
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.open-in-view=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type=TRACE
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 springdoc.api-docs.path=/api-docs
 # Specify the path of the Swagger UI
@@ -28,4 +28,6 @@ application.security.jwt.secret-key= 404E635266556A586E3272357538782F413F4428472
 application.security.jwt.expiration= 86400000
 application.security.jwt.refresh-token.expiration= 604800000
 app.messages.recoverPwdEmailBodyFile= RECOVER-PASSWORD-EMAIL-BODY-TEMPLATE.txt
-app.messages.recoverPwdEmailSub= Forgot Password || MaitriSanskar
+app.messages.recoverPwdEmailSub= MaitriSanskar || Forgot Password
+app.messages.TrainingEmailBodyFile= MBPTrainingTeam-EMAIL-BODY-TEMPLATE.txt
+app.messages.TrainingEmailSub= MaitriSanskar || Training Start Notification
