--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,5 @@ app.messages.recoverPwdEmailBodyFile= RECOVER-PASSWORD-EMAIL-BODY-TEMPLATE.txt
 app.messages.recoverPwdEmailSub= MaitriSanskar || Forgot Password
 app.messages.TrainingEmailBodyFile= MBPTrainingTeam-EMAIL-BODY-TEMPLATE.txt
 app.messages.TrainingEmailSub= MaitriSanskar || Training Start Notification
+app.messages.AgreementEmailBodyFile= MBPAgreementTeam-EMAIL-BODY-TEMPLATE.txt
+app.messages.AgreementEmailSub= MaitriSanskar || Agreement
