--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.username = root
 spring.datasource.password = Pune@1613
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.open-in-view=false
+spring.jpa.show-sql=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type=TRACE
